SERVER-21272 Make replica set monitor retry finding hosts

This change makes the replica set monitor retry more than once to find
hosts suitable for a given read preference and fail quickly if none of the
hosts for a given replica set can be reached.