src/mongo/client/remote_command_targeter_rs.cpp
@@ -59,23 +59,7 @@ ConnectionString RemoteCommandTargeterRS::connectionString() {
 }
 
 StatusWith<HostAndPort> RemoteCommandTargeterRS::findHost(const ReadPreferenceSetting& readPref) {
-    if (!_rsMonitor) {
-        return Status(ErrorCodes::ReplicaSetNotFound,
-                      str::stream() << "unknown replica set " << _rsName);
-    }
-
-    HostAndPort hostAndPort = _rsMonitor->getHostOrRefresh(readPref);
-    if (hostAndPort.empty()) {
-        if (readPref.pref == ReadPreference::PrimaryOnly) {
-            return Status(ErrorCodes::NotMaster,
-                          str::stream() << "No master found for set " << _rsName);
-        }
-        return Status(ErrorCodes::FailedToSatisfyReadPreference,
-                      str::stream() << "could not find host matching read preference "
-                                    << readPref.toString() << " for set " << _rsName);
-    }
-
-    return hostAndPort;
+    return _rsMonitor->getHostOrRefresh(readPref);
 }
 
 void RemoteCommandTargeterRS::markHostNotMaster(const HostAndPort& host) {
